<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MyLocalization</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="football">Indonesia national team win against Thailand National Team</string>
    <string name="goal">Goal from Indonesia scored by %1$s and %2$s, so the final score is  %3$d - %4$d for Indonesia Victory </string>
    <plurals name="numberOfSongAvailable">
        <item quantity="one">%d song found</item>
        <item quantity="other">%d song found</item>
    </plurals>
    <string name="app_homeurl">
        Visit us at  <xliff:g id="homepage">https://www.polines.ac.id</xliff:g> 
    </string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="tab_text1">Home</string>
    <string name="tab_text2">Profile</string>
    <string name="profile_fragment">My Profile</string>
    <string name="Name">Name</string>
    <string name="nName">Restu Galih Kustiawan</string>
    <string name="Address">Address</string>
    <string name="nAddress">23 Tentara Pelajar Street</string>
    <string name="Hobby">Hobby</string>
    <string name="nHobby">Football</string>
    <string name="Quote">Quote</string>
    <string name="nQuote">You are the captain of your own ship of

                            happiness. If you cant take the wheels, then someone else will
</string>


</resources>
