<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/profile_fragment" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/trio_kampret"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/Name"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text="@string/nName"
                android:textColor="@android:color/black"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginRight="16dp"
                android:text="@string/Address"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text="@string/nAddress"
                android:textColor="@android:color/black"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginRight="16dp"
                android:text="@string/Hobby"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text="@string/nHobby"
                android:textColor="@android:color/black"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginRight="16dp"
                android:text="@string/Quote"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text="@string/nQuote"
                android:textColor="@android:color/black"/>




        </TableRow>


    </TableLayout>

    <!--    <de.hdodenhof.circleimageview.CircleImageView-->
    <!--        android:layout_width="180dp"-->
    <!--        android:layout_height="180dp"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:layout_marginTop="80dp"-->
    <!--        android:gravity="center"-->
    <!--        android:src="@drawable/fotow" />-->

</LinearLayout>
<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:text="@string/profile_fragment" />-->

<!--    <de.hdodenhof.circleimageview.CircleImageView-->
<!--        android:layout_width="180dp"-->
<!--        android:layout_height="180dp"-->
<!--        android:src="@drawable/fotow"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_marginTop="30dp"/>-->




<!--    <de.hdodenhof.circleimageview.CircleImageView-->
<!--        android:layout_width="180dp"-->
<!--        android:layout_height="180dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="80dp"-->
<!--        android:gravity="center"-->
<!--        android:src="@drawable/fotow" />-->
</FrameLayout>